--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     >
     <TextView
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:text="Home"/>
     <Button
+        android:layout_gravity="center_vertical|center"
         android:id="@+id/btn_click_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="click"/>
 
-</LinearLayout>
+</FrameLayout>
